@startuml

!define ENTITY entity
!define RELATIONSHIP relationship

' Users Collection
ENTITY "User" as user {
  * _id: ObjectId <<generated>>
  * email: String <<unique>>
  * password: String <<hashed>>
  * role: String <<enum: student|staff|admin>>
  * name: String
  --
  studentId: String <<nullable, unique>>
  roomNumber: String <<nullable>>
  bagNumber: String <<nullable, unique>>
  employeeId: String <<nullable, unique>>
  adminId: String <<nullable, unique>>
  --
  * isActive: Boolean <<default: true>>
  * createdAt: Date <<auto-generated>>
  * updatedAt: Date <<auto-generated>>
}

' Laundry Requests Collection
ENTITY "LaundryRequest" as laundry {
  * _id: ObjectId <<generated>>
  * requestId: String <<unique, indexed>>
  * studentId: ObjectId <<FK: User>>
  * studentName: String <<denormalized>>
  * studentEmail: String <<denormalized>>
  * bagNumber: String <<indexed>>
  * roomNumber: String <<denormalized>>
  --
  * declaredItems: Number <<min: 1>>
  receivedItems: Number <<nullable>>
  * hasDiscrepancy: Boolean <<default: false>>
  discrepancyNotes: String <<nullable>>
  --
  * status: String <<enum: pending|collected|washing|ready|delivered, indexed>>
  --
  collectedBy: ObjectId <<FK: User, nullable>>
  collectedAt: Date <<nullable>>
  --
  verifiedBy: ObjectId <<FK: User, nullable>>
  verifiedAt: Date <<nullable>>
  --
  deliveredAt: Date <<nullable>>
  --
  * createdAt: Date <<auto-generated, indexed>>
  * updatedAt: Date <<auto-generated>>
}

' Relationships
user ||--o{ laundry : "submits\n(studentId)"
user }o--|| laundry : "collects\n(collectedBy)"
user }o--|| laundry : "verifies\n(verifiedBy)"

' Indexes
note right of user
  **Indexes:**
  - email (unique)
  - role
  - studentId (unique)
  - bagNumber (unique)
end note

note right of laundry
  **Indexes:**
  - requestId (unique)
  - studentId
  - status
  - bagNumber
  - createdAt (descending)
end note

' Constraints
note bottom of laundry
  **Status Transitions:**
  pending -> collected
  collected -> washing
  washing -> ready
  ready -> delivered

  **Discrepancy Detection:**
  hasDiscrepancy = true
  when declaredItems ≠ receivedItems
end note

@enduml
